todo SOLUCIONADOgit add .git add .git add .

--- a/config/configuration.ini
+++ b/config/configuration.ini
@@ -1,8 +1,5 @@
 servername=localhost 
 username=root
-<<<<<<< HEAD
-password=" "
-=======
-password=''
->>>>>>> 0185fce6ff757edab8c196415d1118eecf78285d
+password=' '
 dbname=animalia
+port=33067
